[metadata]
name = qpu
version = 0.0.1
author = Areeq Hasan
author_email = areeq.i.hasan@gmail.com
description = qpu is a software development kit for designing, building, and testing parameterized quantum circuits that accept quantum programs (sets of quantum instructions) as input and return the result of executing said quantum instructions as output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/areeq-hasan/qpu
project_urls =
    Bug Tracker = https://github.com/areeq-hasan/qpu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9